project/ansible/roles/logging_stack/files/ingress-efk.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efk-ingress
  namespace: logging
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
    host: gitops.drintech.online
